# RecSys-airi

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
notebooks/: IALS.ipynb  SASRec.ipynb  SVD & CB tuning.ipynb  ease_model .ipynb  lightFM.ipynb  split_data.ipynb  tensor_model.ipynb  top-pop.ipynb
src/: EASEModel.py  SASRec.py  TensorModel.py  __init__.py  metrics.py  pipeline.py  preprocess.py  tune_model.py
