[tool.poetry]
name = "recsys-airi"
version = "0.1.0"
description = ""
authors = ["y.konyushenko a.bredikhin"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
polara = {git = "git@github.com:evfro/polara.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
